--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "JUCCodingProject",
   "version": "1.0.0",
   "description": "Take home coding challenge project for internship interview process.",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
+    "wp": "webpack -d --watch",
     "start": "nodemon server/index.js"
   },
   "resolutions": {
