--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.jsx",
   "scripts": {
     "devbuild": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "devstart": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "resolutions": {
     "styled-components": "^5"
