read me update and package name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JUCCodingProject",
+  "name": "juccodingproject",
   "version": "1.0.0",
   "description": "Take home coding challenge project for internship interview process.",
   "main": "index.jsx",
